[profile.release]
panic = 'unwind'

[workspace]
members = [
	"zenlink-protocol",
	"zenlink-protocol/rpc",
	"zenlink-stable-amm",
	"zenlink-stable-amm/rpc",
	"zenlink-stable-amm/rpc/runtime-api",
	"zenlink-swap-router",
	"zenlink-vault",
	"zenlink-gauge",
	"example/node",
	"example/runtime",
	"example/primitives"
]


[patch.'https://github.com/paritytech/substrate']
frame-benchmarking = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
frame-support = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
frame-system = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
pallet-authority-discovery = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
pallet-authorship = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
pallet-babe = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
pallet-balances = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
pallet-elections-phragmen = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
pallet-scheduler = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
pallet-session = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
pallet-staking = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
pallet-timestamp = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
pallet-treasury = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
pallet-vesting = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
pallet-transaction-payment = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sc-client-api = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sc-client-db = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sc-executor = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sc-executor-common = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sc-executor-wasmi = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sc-utils = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-api = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-application-crypto = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-arithmetic = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-authority-discovery = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-blockchain = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-consensus = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-consensus-slots = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-core = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-debug-derive = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-externalities = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-inherents = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-io = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-keystore = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-npos-elections = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-panic-handler = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-runtime = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-runtime-interface = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-session = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-staking = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-state-machine = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-std = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-storage = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-timestamp = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-trie = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-version = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-wasm-interface = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-tracing = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-maybe-compressed-blob = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-weights = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }

[patch.'https://github.com/paritytech/cumulus']
cumulus-primitives-core = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.38" }
cumulus-pallet-dmp-queue = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.38" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.38" }
cumulus-pallet-xcm = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.38" }
parachain-info = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.38" }

[patch.'https://github.com/paritytech/polkadot']
pallet-xcm = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.38" }
polkadot-core-primitives = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.38" }
polkadot-runtime-parachains = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.38" }
polkadot-parachain = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.38" }
polkadot-primitives = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.38" }
xcm = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.38" }
xcm-executor = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.38" }
xcm-builder = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.38" }
xcm-simulator = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.38" }