[profile.release]
panic = 'unwind'

[workspace]
members = [
	"zenlink-protocol",
	"zenlink-protocol/rpc",
	"zenlink-stable-amm",
	"zenlink-stable-amm/rpc",
	"zenlink-stable-amm/rpc/runtime-api",
	"zenlink-swap-router",
	"zenlink-vault",
	"zenlink-gauge",
	"example/node",
	"example/runtime",
	"example/primitives"
]


[patch.'https://github.com/paritytech/substrate']
frame-benchmarking = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
frame-support = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
frame-system = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
pallet-authority-discovery = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
pallet-authorship = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
pallet-babe = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
pallet-balances = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
pallet-elections-phragmen = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
pallet-scheduler = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
pallet-session = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
pallet-staking = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
pallet-timestamp = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
pallet-treasury = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
pallet-vesting = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
pallet-transaction-payment = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-client-api = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-client-db = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-executor = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-executor-common = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-executor-wasmi = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-utils = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-api = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-application-crypto = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-arithmetic = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-authority-discovery = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-blockchain = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-consensus = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-consensus-slots = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-core = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-debug-derive = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-externalities = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-inherents = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-io = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-keystore = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-npos-elections = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-panic-handler = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-runtime-interface = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-session = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-staking = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-state-machine = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-std = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-storage = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-timestamp = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-trie = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-version = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-wasm-interface = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-tracing = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-maybe-compressed-blob = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-weights = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }

[patch.'https://github.com/paritytech/cumulus']
cumulus-primitives-core = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }
cumulus-pallet-dmp-queue = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }
cumulus-pallet-xcm = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }
parachain-info = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }

[patch.'https://github.com/paritytech/polkadot']
pallet-xcm = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43" }
polkadot-core-primitives = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43" }
polkadot-runtime-parachains = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43" }
polkadot-parachain = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43" }
polkadot-primitives = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43" }
xcm = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43" }
xcm-executor = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43" }
xcm-builder = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43" }
xcm-simulator = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43" }
